# intersection-wasm

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  build-wasm.sh
demo/: bootstrap.js  index.html  index.js  index.test.js  package-lock.json  package.json  webpack.config.js
src/: lib.rs  macros.rs  utils.rs
tests/: mesh_mesh_isect.rs  no_div_tri_tri_isect.rs
