[package]
name = "intersection-wasm"
version = "1.2.1"
authors = ["Bogdan Arabadzhi <bogdan.today@gmail.com>"]
edition = "2018"

description = "Mesh-Mesh and Triangle-Triangle Intersection tests based on the algorithm by Tomas Akenine-Möller"
homepage = "https://github.com/catenda/intersection-wasm"
repository = "https://github.com/catenda/intersection-wasm"
readme = "README.md"
keywords = ["3d", "mesh", "triangle", "intersect", "intersection", "collision", "collision-detection", "collide"]
categories = ["algorithms", "science", "wasm"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.55"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.5"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
